# CoopIHC-zoo

./: .buildinfo  .gitignore  .old_demo_behavioral_cloning_handmade.py  DONE_AND_TODO.md  README.md  api.html  debug.py  demo_behavioral_cloning.py  demo_behavioral_cloning_hand_made.py  demo_behavioral_cloning_hand_made_V2.py  demo_behavioral_cloning_handmade.py  demo_dagger.py  demo_dagger_handmade.py  genindex.html  index.html  notes.md  objects.inv  pointing_behavioral_cloning.py  pointing_expert.py  pointing_rl.py  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  teaching_behavioral_cloning.py  teaching_conservative_sampling_example.py  teaching_dagger.py  teaching_example.py  teaching_leitner_example.py  teaching_myopic_example.py  teaching_random_example.py  teaching_rl_example.py  worksheet.py
.old/: pointing_simple.py  teaching_dagger.py  teaching_leitner_example.py  teaching_random_example.py
.tmp/: eval_user_different_decay.pkl  eval_user_different_recall.pkl  eval_user_param.pkl  log.monitor.csv
_autosummary/: coopihczoo.eye.html  coopihczoo.html  coopihczoo.imitation.cartpole.html  coopihczoo.imitation.cartpole.noisy_cartpole.NoisyCartPoleEnv.html  coopihczoo.imitation.cartpole.noisy_cartpole.html  coopihczoo.imitation.core.html  coopihczoo.imitation.html  coopihczoo.imitation.pointing.html  coopihczoo.pointing.assistants.html  coopihczoo.pointing.envs.html  coopihczoo.pointing.examples.html  coopihczoo.pointing.html  coopihczoo.pointing.users.html  coopihczoo.teaching.action_wrapper.action_wrapper.html  (+36 more)
(+233 files in other folders)
