[tool.poetry]
name = "coopihczoo"
version = "0.0.4"
description = "CoopIHC-zoo: Collection of tasks and agents for CoopIHC"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.21.4"
websockets = "^10.1"
torch = "^1.10.0"
stable-baselines3 = "^1.3.0"
PyYAML = "^6.0"
coopihc = { path = "../CoopIHC/", develop = true }




[tool.poetry.dev-dependencies]
Sphinx = "^4.3.1"
sphinx-rtd-theme = "^1.0.0"
twine = "^3.7.0"
pytest = "^6.2.5"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
secondary = true


[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "poetry.core.masonry.api"
